fix: :zap: Eliminated extra space in the music cards

--- a/musicBox/main.css
+++ b/musicBox/main.css
@@ -17,7 +17,7 @@
     background-color: white;
     margin: 25px 25px;
     padding: 50px 50px;
-    width: 600px;
+    width: 400px;
     border-radius: 16px;
     box-shadow: 10px 10px 6px rgb(42, 187, 6);
 }
